--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 
   <div class="hero-grid">
     <a href="hero.html?hero=nagraj" class="hero-card">
-      <img src="images/heroes/nagraj.jpg">
+      <img src="images/heroes/Nagraj.jpg">
       <h2>Nagraj</h2>
     </a>
 
     <a href="hero.html?hero=doga" class="hero-card">
-      <img src="images/heroes/doga.jpg">
+      <img src="images/heroes/Doga.jpg">
       <h2>Doga</h2>
     </a>
 
     <a href="hero.html?hero=dhruva" class="hero-card">
-      <img src="images/heroes/dhruva.jpg">
-      <h2>Dhruva</h2>
+      <img src="images/heroes/Dhruv.jpg">
+      <h2>Dhruv</h2>
     </a>
 
-    <a href="hero.html?hero=bankelal" class="hero-card">
-      <img src="images/heroes/bankelal.jpg">
-      <h2>Bankelal</h2>
+    <a href="hero.html?hero=shakti" class="hero-card">
+      <img src="images/heroes/Shakti.jpg">
+      <h2>Shakti</h2>
     </a>
   </div>
 </section>
