--- a/index.html
+++ b/index.html
@@ -30,18 +30,47 @@
 <section class="slider">
   <h2 class="section-title">Popular Heroes</h2>
   <div class="slide-container">
+
     <a href="heroes/nagraj.html">
-      <img src="images/heroes/nagraj.jpg" class="glow-img">
+      <img src="images/heroes/nagraj.jpg" class="glow-img" alt="Nagraj">
     </a>
+
     <a href="heroes/dhruv.html">
-      <img src="images/heroes/dhruv.jpg" class="glow-img">
+      <img src="images/heroes/dhruv.jpg" class="glow-img" alt="Super Commando Dhruva">
     </a>
+
     <a href="heroes/doga.html">
-      <img src="images/heroes/doga.jpg" class="glow-img">
+      <img src="images/heroes/doga.jpg" class="glow-img" alt="Doga">
     </a>
+
     <a href="heroes/bhokal.html">
-      <img src="images/heroes/bhokal.jpg" class="glow-img">
+      <img src="images/heroes/bhokal.jpg" class="glow-img" alt="Bhokal">
     </a>
+
+    <a href="heroes/parmanu.html">
+      <img src="images/heroes/parmanu.jpg" class="glow-img" alt="Parmanu">
+    </a>
+
+    <a href="heroes/shakti.html">
+      <img src="images/heroes/shakti.jpg" class="glow-img" alt="Shakti">
+    </a>
+
+    <a href="heroes/tiranga.html">
+      <img src="images/heroes/tiranga.jpg" class="glow-img" alt="Tiranga">
+    </a>
+
+    <a href="heroes/inspector_steel.html">
+      <img src="images/heroes/inspector_steel.jpg" class="glow-img" alt="Inspector Steel">
+    </a>
+
+    <a href="heroes/anthony.html">
+      <img src="images/heroes/anthony.jpg" class="glow-img" alt="Anthony">
+    </a>
+
+    <a href="heroes/bankelal.html">
+      <img src="images/heroes/bankelal.jpg" class="glow-img" alt="Bankelal">
+    </a>
+
   </div>
 </section>
 
