--- a/heroes/doga.html
+++ b/heroes/doga.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Doga | ComicLibrary</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
+<body>
+
+  <h1>DOGA</h1>
+
+  <p>
+    Doga is one of the darkest and most intense heroes of Raj Comics.
+    Operating in Mumbai’s criminal underworld, he fights crime with ruthless determination.
+    Unlike traditional superheroes, Doga relies on weapons, combat mastery, and fearless tactics
+    to eliminate criminals and protect innocent citizens from violence and corruption.
+  </p>
+
+  <hr>
+
+  <!-- Clickable Image -->
+  <a href="../images/heroes/Doga.jpg" target="_blank">
+    <img src="../images/heroes/Doga.jpg" alt="Doga Raj Comics" width="300">
+  </a>
+
+  <h2>Real Name</h2>
+  <p>Suraj</p>
+
+  <h2>First Appearance</h2>
+  <p>Curfew</p>
+
+  <br>
+  <a href="../index.html">⬅ Back to Home</a>
+
+</body>
+</html>
