--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 <!-- HERO -->
 <section class="hero-slider">
   <div class="hero-container">
-    <div class="hero-card">Hero Comic 1</div>
+    <a href="/heroes/nagraj.html" class="hero-card">
+    <img src="/images/heroes/nagraj.jpg" alt="Nagraj Comic">
+    <span class="hero-title">Nagraj</span>
+</a>
     <div class="hero-card">Hero Comic 2</div>
     <div class="hero-card">Hero Comic 3</div>
     <div class="hero-card">Hero Comic 4</div>
