--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <!-- HERO -->
 <section class="hero-slider">
   <div class="hero-container">
-    <a href="/heroes/nagraj.html" class="hero-card">
-    <img src="/images/heroes/nagraj.jpg" alt="Nagraj Comic">
+    <a href="heroes/nagraj.html" class="hero-card">
+    <img src="images/heroes/nagraj.jpg" alt="Nagraj">
     <span class="hero-title">Nagraj</span>
 </a>
     <div class="hero-card">Hero Comic 2</div>
