--- a/heroes/dhruv.html
+++ b/heroes/dhruv.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Super Commando Dhruva | ComicLibrary</title>
+    <link rel="stylesheet" href="../css/hero.css">
+</head>
+<body>
 
+<!-- Header -->
+<header class="header">
+    <h1>ComicLibrary</h1>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="../heroes.html">Heroes</a>
+    </nav>
+</header>
+
+<!-- Hero Details Section -->
+<section class="hero-profile">
+    <div class="hero-image">
+        <img src="../images/heroes/dhruva/dhruva.png" alt="Super Commando Dhruva">
+    </div>
+
+    <div class="hero-info">
+        <h2>Super Commando Dhruva</h2>
+        <p>
+            Super Commando Dhruva is one of the most popular heroes of Raj Comics.
+            He has no superpowers but uses intelligence, martial arts, and gadgets
+            to fight crime.
+        </p>
+
+        <h3>Powers & Skills</h3>
+        <ul class="powers">
+            <li>Expert Martial Artist</li>
+            <li>Master Acrobat</li>
+            <li>Animal Communication</li>
+            <li>High Intelligence & Strategy</li>
+            <li>Advanced Gadgets</li>
+        </ul>
+    </div>
+</section>
+
+<!-- Comics List (Ordered Grid) -->
+<section class="comics-section">
+    <h2>Dhruva Comics</h2>
+
+    <ol class="comics-grid">
+
+        <li>
+            <a href="../comics/dhruva/pratishodh-ki-jwala.html">
+                <img src="../images/heroes/dhruva/comic1.jpg" alt="">
+                <p>Pratishodh Ki Jwala</p>
+            </a>
+        </li>
+
+        <li>
+            <a href="../comics/dhruva/robot.html">
+                <img src="../images/heroes/dhruva/comic2.jpg" alt="">
+                <p>Robot</p>
+            </a>
+        </li>
+
+        <li>
+            <a href="../comics/dhruva/chandkaal.html">
+                <img src="../images/heroes/dhruva/comic3.jpg" alt="">
+                <p>Chandkaal</p>
+            </a>
+        </li>
+
+    </ol>
+</section>
+
+</body>
+  </html>
