--- a/index.html
+++ b/index.html
@@ -46,13 +46,52 @@
 <!-- HERO -->
 <section class="hero-slider">
   <div class="hero-container">
-    <a href="heroes/nagraj.html" class="hero-card">
+    <!-- Heroes Grid -->
+
+<a href="heroes/anthony.html" class="hero-card">
+    <img src="images/heroes/anthony.jpg" alt="Anthony">
+    <span class="hero-title">Anthony</span>
+</a>
+
+<a href="heroes/bhediya.html" class="hero-card">
+    <img src="images/heroes/bhediya.jpg" alt="Bhediya">
+    <span class="hero-title">Bhediya</span>
+</a>
+
+<a href="heroes/dhruva.html" class="hero-card">
+    <img src="images/heroes/dhruva.jpg" alt="Dhruva">
+    <span class="hero-title">Super Commando Dhruva</span>
+</a>
+
+<a href="heroes/doga.html" class="hero-card">
+    <img src="images/heroes/doga.jpg" alt="Doga">
+    <span class="hero-title">Doga</span>
+</a>
+
+<a href="heroes/nagraj.html" class="hero-card">
     <img src="images/heroes/nagraj.jpg" alt="Nagraj">
     <span class="hero-title">Nagraj</span>
 </a>
-    <div class="hero-card">Hero Comic 2</div>
-    <div class="hero-card">Hero Comic 3</div>
-    <div class="hero-card">Hero Comic 4</div>
+
+<a href="heroes/parmanu.html" class="hero-card">
+    <img src="images/heroes/parmanu.jpg" alt="Parmanu">
+    <span class="hero-title">Parmanu</span>
+</a>
+
+<a href="heroes/rajcomic.html" class="hero-card">
+    <img src="images/heroes/rajcomic.jpg" alt="Raj Comics">
+    <span class="hero-title">Raj Comics</span>
+</a>
+
+<a href="heroes/shakti.html" class="hero-card">
+    <img src="images/heroes/shakti.jpg" alt="Shakti">
+    <span class="hero-title">Shakti</span>
+</a>
+
+<a href="heroes/tiranga.html" class="hero-card">
+    <img src="images/heroes/tiranga.jpg" alt="Tiranga">
+    <span class="hero-title">Tiranga</span>
+</a>
   </div>
 </section>
 
