--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- CSS LINK -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/hero.css">
 </head>
 <body>
 
