--- a/heroes/dhruva.html
+++ b/heroes/dhruva.html
@@ -15,8 +15,30 @@
 
 <!-- HEADER -->
 <header class="header">
-    <div class="logo">ComicLibrary</div>
+  <div class="logo">ComicLibrary</div>
+
+  <div class="header-right">
+    <div class="search-icon">🔍</div>
+
+    <div class="menu" id="menuBtn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+
+  <div class="dropdown" id="dropdownMenu">
+    <a href="../index.html">Home</a>
+    <a href="#">Trending</a>
+    <a href="#">Categories</a>
+    <a href="#">Contact</a>
+  </div>
 </header>
+
+<!-- SEARCH OVERLAY -->
+<div class="search-overlay" id="searchOverlay">
+  <input type="text" placeholder="Search comics...">
+</div>
 
 <div class="hero-detail">
 
