--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -1,33 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Nagraj - ComicLibrary</title>
-  <link rel="stylesheet" href="../css/style.css">
+    <meta charset="UTF-8">
+    <title>Nagraj | ComicLibrary</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="../css/style.css">
+
+    <!-- Nagraj Theme CSS -->
+    <link rel="stylesheet" href="../css/nagraj.css">
 </head>
 <body>
 
-<header>
-  <div class="logo glow-text">ComicLibrary</div>
-  <a href="../index.html">Home</a>
+<!-- HEADER (Same as index) -->
+<header class="header">
+  <div class="logo">ComicLibrary</div>
+
+  <div class="header-right">
+    <div class="search-icon">🔍</div>
+
+    <div class="menu" id="menuBtn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+
+  <div class="dropdown" id="dropdownMenu">
+    <a href="../index.html">Home</a>
+    <a href="#">Trending</a>
+    <a href="#">Categories</a>
+    <a href="#">Contact</a>
+  </div>
 </header>
 
-<section class="welcome">
-  <h1 class="glow-text">Nagraj</h1>
-  <img src="../images/heroes/nagraj.jpg" height="250" class="glow-img">
-  <p>The Snake King and protector of humanity.</p>
+<!-- SEARCH -->
+<div class="search-overlay" id="searchOverlay">
+  <input type="text" placeholder="Search comics...">
+</div>
 
-  <h2>Powers</h2>
-  <ul>
-    <li>Control over snakes</li>
-    <li>Poisonous blood</li>
-    <li>Super strength</li>
-    <li>Regeneration</li>
-  </ul>
-</section>
 
-<footer>
-  <p>© 2026 ComicLibrary</p>
+<!-- NAGRAJ PAGE -->
+<div class="hero-detail nagraj-bg">
+
+    <!-- Profile -->
+    <div class="hero-profile">
+        <img src="../images/heroes/nagraj.jpg" alt="Nagraj">
+
+        <div class="hero-info">
+            <h1>Nagraj</h1>
+            <p>
+                Nagraj is the king of snakes and one of the most powerful superheroes
+                from Raj Comics. Created by the mysterious Naga civilization, he fights
+                evil using his deadly snake powers, poison abilities, and superhuman strength.
+            </p>
+        </div>
+    </div>
+
+    <!-- Powers -->
+    <div class="powers">
+        <h2>Powers & Abilities</h2>
+        <ul>
+            <li>Control over millions of snakes</li>
+            <li>Deadly poison attacks</li>
+            <li>Superhuman strength and healing</li>
+            <li>Can transform body into snake swarm</li>
+            <li>Hypnosis and mind control</li>
+        </ul>
+    </div>
+
+    <!-- Comics -->
+    <div class="comics-section">
+        <h2>Popular Comics</h2>
+
+        <div class="comics-grid">
+
+            <div class="comic-card">
+                <img src="../images/comics/nagraj1.jpg">
+                <span>Nagraj Janm Katha</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/nagraj2.jpg">
+                <span>Nagraj Ki Kabra</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/nagraj3.jpg">
+                <span>Nagraj Aur Toofan</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/nagraj4.jpg">
+                <span>Nagraj vs Vishkanya</span>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+<footer class="footer">
+    <div class="footer-container">
+        <p>© 2026 ComicLibrary</p>
+    </div>
 </footer>
 
+<script src="../js/nagraj.js"></script>
 </body>
-</html>
+  </html>
