--- a/heroes/inspector_steel.html
+++ b/heroes/inspector_steel.html
@@ -1,1 +1,113 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Inspector Steel | ComicLibrary</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="../css/style.css">
+
+    <!-- Steel Theme CSS -->
+    <link rel="stylesheet" href="../css/inspector_steel.css">
+</head>
+<body>
+
+<!-- HEADER -->
+<header class="header">
+  <div class="logo">ComicLibrary</div>
+
+  <div class="header-right">
+    <div class="search-icon">🔍</div>
+
+    <div class="menu" id="menuBtn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+
+  <div class="dropdown" id="dropdownMenu">
+    <a href="../index.html">Home</a>
+    <a href="#">Trending</a>
+    <a href="#">Categories</a>
+    <a href="#">Contact</a>
+  </div>
+</header>
+
+<!-- SEARCH -->
+<div class="search-overlay" id="searchOverlay">
+  <input type="text" placeholder="Search comics...">
+</div>
+
+
+<!-- INSPECTOR STEEL PAGE -->
+<div class="hero-detail steel-bg">
+
+    <!-- Profile -->
+    <div class="hero-profile">
+        <img src="../images/heroes/inspector_steel.jpg" alt="Inspector Steel">
+
+        <div class="hero-info">
+            <h1>Inspector Steel</h1>
+            <p>
+                Inspector Steel is a cybernetic law enforcer from Raj Comics.
+                After a near-fatal incident, his body was rebuilt with advanced
+                mechanical parts, giving him superhuman strength, durability,
+                and powerful technological abilities to fight crime.
+            </p>
+        </div>
+    </div>
+
+    <!-- Powers -->
+    <div class="powers">
+        <h2>Powers & Abilities</h2>
+        <ul>
+            <li>Cybernetic super strength</li>
+            <li>Bulletproof steel body</li>
+            <li>Advanced targeting and scanning systems</li>
+            <li>Built-in weapons and gadgets</li>
+            <li>High-speed processing and analysis</li>
+        </ul>
+    </div>
+
+    <!-- Comics -->
+    <div class="comics-section">
+        <h2>Popular Comics</h2>
+
+        <div class="comics-grid">
+
+            <div class="comic-card">
+                <img src="../images/comics/steel1.jpg">
+                <span>Inspector Steel Origin</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/steel2.jpg">
+                <span>Steel vs Crime Syndicate</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/steel3.jpg">
+                <span>Cyber Attack</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/steel4.jpg">
+                <span>Machine Justice</span>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+<footer class="footer">
+    <div class="footer-container">
+        <p>© 2026 ComicLibrary</p>
+    </div>
+</footer>
+
+<script src="../js/inspector_steel.js"></script>
+</body>
+  </html>
