--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
 <section class="hero-slider">
   <div class="hero-container">
 
+    <a href="heroes/inspector_steel.html" class="hero-card">
+      <img src="images/heroes/inspector_steel.jpg" alt="Inspector_steel">
+      <span class="hero-title">Inspector_steel</span>
+    </a>
+
+    <a href="heroes/bankelal.html" class="hero-card">
+      <img src="images/heroes/bankelal.jpg" alt="Bankelal">
+      <span class="hero-title">Bankelal</span>
+    </a>
+
     <a href="heroes/anthony.html" class="hero-card">
       <img src="images/heroes/anthony.jpg" alt="Anthony">
       <span class="hero-title">Anthony</span>
