--- a/heroes/anthony.html
+++ b/heroes/anthony.html
@@ -1,1 +1,113 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Anthony | ComicLibrary</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="../css/style.css">
+
+    <!-- Anthony Theme CSS -->
+    <link rel="stylesheet" href="../css/anthony.css">
+</head>
+<body>
+
+<!-- HEADER -->
+<header class="header">
+  <div class="logo">ComicLibrary</div>
+
+  <div class="header-right">
+    <div class="search-icon">🔍</div>
+
+    <div class="menu" id="menuBtn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+
+  <div class="dropdown" id="dropdownMenu">
+    <a href="../index.html">Home</a>
+    <a href="#">Trending</a>
+    <a href="#">Categories</a>
+    <a href="#">Contact</a>
+  </div>
+</header>
+
+<!-- SEARCH -->
+<div class="search-overlay" id="searchOverlay">
+  <input type="text" placeholder="Search comics...">
+</div>
+
+
+<!-- ANTHONY PAGE -->
+<div class="hero-detail anthony-bg">
+
+    <!-- Profile -->
+    <div class="hero-profile">
+        <img src="../images/heroes/anthony.jpg" alt="Anthony">
+
+        <div class="hero-info">
+            <h1>Anthony</h1>
+            <p>
+                Anthony Gonsalves is a unique mystical character from Raj Comics.
+                Known for his humorous personality and supernatural encounters,
+                Anthony often faces ghosts, dark forces, and mysterious threats
+                using courage, wit, and unexpected bravery.
+            </p>
+        </div>
+    </div>
+
+    <!-- Abilities -->
+    <div class="powers">
+        <h2>Abilities & Traits</h2>
+        <ul>
+            <li>Fearless against supernatural forces</li>
+            <li>Strong willpower and courage</li>
+            <li>Experience with ghosts and dark entities</li>
+            <li>Quick thinking in dangerous situations</li>
+            <li>Natural comic timing and humor</li>
+        </ul>
+    </div>
+
+    <!-- Comics -->
+    <div class="comics-section">
+        <h2>Popular Comics</h2>
+
+        <div class="comics-grid">
+
+            <div class="comic-card">
+                <img src="../images/comics/anthony1.jpg">
+                <span>Anthony Aur Dracula</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/anthony2.jpg">
+                <span>Anthony Ki Aatma</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/anthony3.jpg">
+                <span>Anthony Aur Pret</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/anthony4.jpg">
+                <span>Anthony Ka Badla</span>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+<footer class="footer">
+    <div class="footer-container">
+        <p>© 2026 ComicLibrary</p>
+    </div>
+</footer>
+
+<script src="../js/anthony.js"></script>
+</body>
+  </html>
