--- a/heroes/bhokal.html
+++ b/heroes/bhokal.html
@@ -1,1 +1,113 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Bhokal | ComicLibrary</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="../css/style.css">
+
+    <!-- Bhokal Theme CSS -->
+    <link rel="stylesheet" href="../css/bhokal.css">
+</head>
+<body>
+
+<!-- HEADER -->
+<header class="header">
+  <div class="logo">ComicLibrary</div>
+
+  <div class="header-right">
+    <div class="search-icon">🔍</div>
+
+    <div class="menu" id="menuBtn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+
+  <div class="dropdown" id="dropdownMenu">
+    <a href="../index.html">Home</a>
+    <a href="#">Trending</a>
+    <a href="#">Categories</a>
+    <a href="#">Contact</a>
+  </div>
+</header>
+
+<!-- SEARCH -->
+<div class="search-overlay" id="searchOverlay">
+  <input type="text" placeholder="Search comics...">
+</div>
+
+
+<!-- BHOKAL PAGE -->
+<div class="hero-detail bhokal-bg">
+
+    <!-- Profile -->
+    <div class="hero-profile">
+        <img src="../images/heroes/bhokal.jpg" alt="Bhokal">
+
+        <div class="hero-info">
+            <h1>Bhokal</h1>
+            <p>
+                Bhokal is a legendary warrior prince from the magical kingdom of
+                Parilok. Blessed with immense strength, divine weapons, and royal
+                courage, he fights dark forces, demons, and evil rulers to protect
+                justice and honor.
+            </p>
+        </div>
+    </div>
+
+    <!-- Powers -->
+    <div class="powers">
+        <h2>Powers & Abilities</h2>
+        <ul>
+            <li>Superhuman strength and endurance</li>
+            <li>Master swordsman and warrior</li>
+            <li>Wields magical weapons</li>
+            <li>Royal leadership and battle strategy</li>
+            <li>Enhanced combat instincts</li>
+        </ul>
+    </div>
+
+    <!-- Comics -->
+    <div class="comics-section">
+        <h2>Popular Comics</h2>
+
+        <div class="comics-grid">
+
+            <div class="comic-card">
+                <img src="../images/comics/bhokal1.jpg">
+                <span>Bhokal Ki Talwar</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/bhokal2.jpg">
+                <span>Parilok Ka Yudh</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/bhokal3.jpg">
+                <span>Mahaguru Bhokal</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/bhokal4.jpg">
+                <span>Bhokal vs Rakshas</span>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+<footer class="footer">
+    <div class="footer-container">
+        <p>© 2026 ComicLibrary</p>
+    </div>
+</footer>
+
+<script src="../js/bhokal.js"></script>
+</body>
+      </html>
