--- a/heroes/bankelal.html
+++ b/heroes/bankelal.html
@@ -1,1 +1,113 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Bankelal | ComicLibrary</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="../css/style.css">
+
+    <!-- Bankelal Theme CSS -->
+    <link rel="stylesheet" href="../css/bankelal.css">
+</head>
+<body>
+
+<!-- HEADER -->
+<header class="header">
+  <div class="logo">ComicLibrary</div>
+
+  <div class="header-right">
+    <div class="search-icon">🔍</div>
+
+    <div class="menu" id="menuBtn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+
+  <div class="dropdown" id="dropdownMenu">
+    <a href="../index.html">Home</a>
+    <a href="#">Trending</a>
+    <a href="#">Categories</a>
+    <a href="#">Contact</a>
+  </div>
+</header>
+
+<!-- SEARCH -->
+<div class="search-overlay" id="searchOverlay">
+  <input type="text" placeholder="Search comics...">
+</div>
+
+
+<!-- BANKELAL PAGE -->
+<div class="hero-detail bankelal-bg">
+
+    <!-- Profile -->
+    <div class="hero-profile">
+        <img src="../images/heroes/bankelal.jpg" alt="Bankelal">
+
+        <div class="hero-info">
+            <h1>Bankelal</h1>
+            <p>
+                Bankelal is a humorous and clever character from Raj Comics.
+                Known for his selfish yet funny plans to become king, his
+                schemes always backfire and end up helping others. His stories
+                combine comedy, magic, and unexpected heroism.
+            </p>
+        </div>
+    </div>
+
+    <!-- Traits -->
+    <div class="powers">
+        <h2>Traits & Abilities</h2>
+        <ul>
+            <li>Extremely clever and manipulative</li>
+            <li>Master of funny schemes and tricks</li>
+            <li>Strong survival instincts</li>
+            <li>Unintentional heroism</li>
+            <li>Often connected with magical situations</li>
+        </ul>
+    </div>
+
+    <!-- Comics -->
+    <div class="comics-section">
+        <h2>Popular Comics</h2>
+
+        <div class="comics-grid">
+
+            <div class="comic-card">
+                <img src="../images/comics/bankelal1.jpg">
+                <span>Bankelal Aur Jadui Talwar</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/bankelal2.jpg">
+                <span>Bankelal Bana Raja</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/bankelal3.jpg">
+                <span>Bankelal Ka Chakravyuh</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/bankelal4.jpg">
+                <span>Bankelal Ki Chaal</span>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+<footer class="footer">
+    <div class="footer-container">
+        <p>© 2026 ComicLibrary</p>
+    </div>
+</footer>
+
+<script src="../js/bankelal.js"></script>
+</body>
+  </html>
