--- a/heroes/inspector_steel.html
+++ b/heroes/inspector_steel.html
@@ -8,7 +8,7 @@
     <!-- Main CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <!-- Steel Theme CSS -->
+    <!-- Page Theme -->
     <link rel="stylesheet" href="../css/inspector_steel.css">
 </head>
 <body>
@@ -51,10 +51,11 @@
         <div class="hero-info">
             <h1>Inspector Steel</h1>
             <p>
-                Inspector Steel is a cybernetic law enforcer from Raj Comics.
-                After a near-fatal incident, his body was rebuilt with advanced
-                mechanical parts, giving him superhuman strength, durability,
-                and powerful technological abilities to fight crime.
+                Inspector Steel is a cybernetic law enforcement hero from Raj Comics.
+                After a life-threatening accident, his body was rebuilt using advanced
+                mechanical technology, making him stronger, faster, and nearly
+                indestructible. He protects the city using intelligence, technology,
+                and powerful cybernetic abilities.
             </p>
         </div>
     </div>
@@ -63,11 +64,11 @@
     <div class="powers">
         <h2>Powers & Abilities</h2>
         <ul>
-            <li>Cybernetic super strength</li>
-            <li>Bulletproof steel body</li>
-            <li>Advanced targeting and scanning systems</li>
-            <li>Built-in weapons and gadgets</li>
-            <li>High-speed processing and analysis</li>
+            <li>Superhuman strength and durability</li>
+            <li>Bulletproof metallic body</li>
+            <li>Advanced sensors and targeting system</li>
+            <li>Built-in combat weapons</li>
+            <li>High-speed data processing and analysis</li>
         </ul>
     </div>
 
@@ -79,22 +80,22 @@
 
             <div class="comic-card">
                 <img src="../images/comics/steel1.jpg">
-                <span>Inspector Steel Origin</span>
+                <span>Steel Ka Badla</span>
             </div>
 
             <div class="comic-card">
                 <img src="../images/comics/steel2.jpg">
-                <span>Steel vs Crime Syndicate</span>
+                <span>Cyber Crime</span>
             </div>
 
             <div class="comic-card">
                 <img src="../images/comics/steel3.jpg">
-                <span>Cyber Attack</span>
+                <span>Machine Hunter</span>
             </div>
 
             <div class="comic-card">
                 <img src="../images/comics/steel4.jpg">
-                <span>Machine Justice</span>
+                <span>Steel vs Syndicate</span>
             </div>
 
         </div>
@@ -110,4 +111,4 @@
 
 <script src="../js/inspector_steel.js"></script>
 </body>
-  </html>
+                </html>
