--- a/heroes/parmanu.html
+++ b/heroes/parmanu.html
@@ -1,1 +1,114 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Parmanu | ComicLibrary</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="../css/style.css">
+
+    <!-- ParmanU Theme CSS -->
+    <link rel="stylesheet" href="../css/parmanu.css">
+</head>
+<body>
+
+<!-- HEADER -->
+<header class="header">
+  <div class="logo">ComicLibrary</div>
+
+  <div class="header-right">
+    <div class="search-icon">🔍</div>
+
+    <div class="menu" id="menuBtn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+
+  <div class="dropdown" id="dropdownMenu">
+    <a href="../index.html">Home</a>
+    <a href="#">Trending</a>
+    <a href="#">Categories</a>
+    <a href="#">Contact</a>
+  </div>
+</header>
+
+<!-- SEARCH -->
+<div class="search-overlay" id="searchOverlay">
+  <input type="text" placeholder="Search comics...">
+</div>
+
+
+<!-- PARMANU PAGE -->
+<div class="hero-detail parmanu-bg">
+
+    <!-- Profile -->
+    <div class="hero-profile">
+        <img src="../images/heroes/parmanu.jpg" alt="Parmanu">
+
+        <div class="hero-info">
+            <h1>Parmanu</h1>
+            <p>
+                ParmanU is a high-tech superhero created by Raj Comics. Equipped
+                with a powerful atomic suit, he can fly, fire energy blasts, and
+                use advanced weapons. He fights crime and protects the nation
+                using technology, courage, and scientific power.
+            </p>
+        </div>
+    </div>
+
+    <!-- Powers -->
+    <div class="powers">
+        <h2>Powers & Abilities</h2>
+        <ul>
+            <li>Powered atomic armor suit</li>
+            <li>Flight capability</li>
+            <li>Energy and laser attacks</li>
+            <li>Advanced weapons and gadgets</li>
+            <li>Enhanced strength and durability</li>
+        </ul>
+    </div>
+
+    <!-- Comics -->
+    <div class="comics-section">
+        <h2>Popular Comics</h2>
+
+        <div class="comics-grid">
+
+            <div class="comic-card">
+                <img src="../images/comics/parmanu1.jpg">
+                <span>Parmanu Ka Janm</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/parmanu2.jpg">
+                <span>Atomic Attack</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/parmanu3.jpg">
+                <span>Mission Desh Raksha</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/parmanu4.jpg">
+                <span>Parmanu vs Terror</span>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+<footer class="footer">
+    <div class="footer-container">
+        <p>© 2026 ComicLibrary</p>
+    </div>
+</footer>
+
+<script src="../js/parmanu.js"></script>
+</body>
+  </html>
