--- a/heroes/shakti.html
+++ b/heroes/shakti.html
@@ -1,1 +1,114 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Shakti | ComicLibrary</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="../css/style.css">
+
+    <!-- Shakti Theme CSS -->
+    <link rel="stylesheet" href="../css/shakti.css">
+</head>
+<body>
+
+<!-- HEADER -->
+<header class="header">
+  <div class="logo">ComicLibrary</div>
+
+  <div class="header-right">
+    <div class="search-icon">🔍</div>
+
+    <div class="menu" id="menuBtn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+
+  <div class="dropdown" id="dropdownMenu">
+    <a href="../index.html">Home</a>
+    <a href="#">Trending</a>
+    <a href="#">Categories</a>
+    <a href="#">Contact</a>
+  </div>
+</header>
+
+<!-- SEARCH -->
+<div class="search-overlay" id="searchOverlay">
+  <input type="text" placeholder="Search comics...">
+</div>
+
+
+<!-- SHAKTI PAGE -->
+<div class="hero-detail shakti-bg">
+
+    <!-- Profile -->
+    <div class="hero-profile">
+        <img src="../images/heroes/shakti.jpg" alt="Shakti">
+
+        <div class="hero-info">
+            <h1>Shakti</h1>
+            <p>
+                Shakti is a powerful female superhero blessed with divine energy.
+                She possesses immense strength, energy projection abilities,
+                and the courage to fight powerful enemies. Shakti represents
+                power, determination, and justice.
+            </p>
+        </div>
+    </div>
+
+    <!-- Powers -->
+    <div class="powers">
+        <h2>Powers & Abilities</h2>
+        <ul>
+            <li>Superhuman strength and endurance</li>
+            <li>Energy blast and power projection</li>
+            <li>Flight ability</li>
+            <li>Enhanced reflexes and combat skills</li>
+            <li>Divine energy transformation</li>
+        </ul>
+    </div>
+
+    <!-- Comics -->
+    <div class="comics-section">
+        <h2>Popular Comics</h2>
+
+        <div class="comics-grid">
+
+            <div class="comic-card">
+                <img src="../images/comics/shakti1.jpg">
+                <span>Shakti Ka Uday</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/shakti2.jpg">
+                <span>Power Strike</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/shakti3.jpg">
+                <span>Shakti vs Darkness</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/shakti4.jpg">
+                <span>Divine Warrior</span>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+<footer class="footer">
+    <div class="footer-container">
+        <p>© 2026 ComicLibrary</p>
+    </div>
+</footer>
+
+<script src="../js/shakti.js"></script>
+</body>
+</html>
