--- a/heroes/tiranga.html
+++ b/heroes/tiranga.html
@@ -1,1 +1,113 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Tiranga | ComicLibrary</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="../css/style.css">
+
+    <!-- Tiranga Theme CSS -->
+    <link rel="stylesheet" href="../css/tiranga.css">
+</head>
+<body>
+
+<!-- HEADER -->
+<header class="header">
+  <div class="logo">ComicLibrary</div>
+
+  <div class="header-right">
+    <div class="search-icon">🔍</div>
+
+    <div class="menu" id="menuBtn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+
+  <div class="dropdown" id="dropdownMenu">
+    <a href="../index.html">Home</a>
+    <a href="#">Trending</a>
+    <a href="#">Categories</a>
+    <a href="#">Contact</a>
+  </div>
+</header>
+
+<!-- SEARCH -->
+<div class="search-overlay" id="searchOverlay">
+  <input type="text" placeholder="Search comics...">
+</div>
+
+
+<!-- TIRANGA PAGE -->
+<div class="hero-detail tiranga-bg">
+
+    <!-- Profile -->
+    <div class="hero-profile">
+        <img src="../images/heroes/tiranga.jpg" alt="Tiranga">
+
+        <div class="hero-info">
+            <h1>Tiranga</h1>
+            <p>
+                Tiranga is a patriotic superhero dedicated to protecting the nation.
+                With advanced combat skills, intelligence, and unwavering courage,
+                he fights terrorism, crime, and threats to national security. He
+                symbolizes bravery, discipline, and love for the country.
+            </p>
+        </div>
+    </div>
+
+    <!-- Powers -->
+    <div class="powers">
+        <h2>Skills & Abilities</h2>
+        <ul>
+            <li>Expert martial artist and combat specialist</li>
+            <li>Master of weapons and tactical operations</li>
+            <li>Highly trained intelligence officer</li>
+            <li>Peak physical strength and endurance</li>
+            <li>Advanced surveillance and strategy skills</li>
+        </ul>
+    </div>
+
+    <!-- Comics -->
+    <div class="comics-section">
+        <h2>Popular Comics</h2>
+
+        <div class="comics-grid">
+
+            <div class="comic-card">
+                <img src="../images/comics/tiranga1.jpg">
+                <span>Mission Tiranga</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/tiranga2.jpg">
+                <span>Desh Rakshak</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/tiranga3.jpg">
+                <span>Operation Border</span>
+            </div>
+
+            <div class="comic-card">
+                <img src="../images/comics/tiranga4.jpg">
+                <span>Tiranga vs Terror</span>
+            </div>
+
+        </div>
+    </div>
+
+</div>
+
+<footer class="footer">
+    <div class="footer-container">
+        <p>© 2026 ComicLibrary</p>
+    </div>
+</footer>
+
+<script src="../js/tiranga.js"></script>
+</body>
+  </html>
