--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 <section class="hero-slider">
   <div class="hero-container">
 
+      <a href="heroes/nagraj.html" class="hero-card">
+      <img src="images/heroes/nagraj.jpg" alt="Nagraj">
+      <span class="hero-title">Nagraj</span>
+      </a>
+
     <a href="heroes/inspector_steel.html" class="hero-card">
       <img src="images/heroes/inspector_steel.jpg" alt="Inspector_steel">
       <span class="hero-title">Inspector_steel</span>
@@ -80,9 +85,9 @@
       <span class="hero-title">Doga</span>
     </a>
 
-    <a href="heroes/nagraj.html" class="hero-card">
-      <img src="images/heroes/nagraj.jpg" alt="Nagraj">
-      <span class="hero-title">Nagraj</span>
+    <a href="heroes/bhokal.html" class="hero-card">
+      <img src="images/heroes/bhokal.jpg" alt="Bhokal">
+      <span class="hero-title">Bhokal</span>
     </a>
 
     <a href="heroes/parmanu.html" class="hero-card">
