--- a/reader/pdf_reader.html
+++ b/reader/pdf_reader.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PDF Reader</title>
+<title>Comic Reader</title>
 
 <link rel="stylesheet" href="../css/pdf_reader.css">
 </head>
